@@ -171,11 +171,13 @@ class Shell(gobject.GObject):
 
         home_model = self._model.get_home()
         activity = home_model.get_active_activity()
-        if activity:
-            try:
-                activity.get_service().TakeScreenshot(timeout=2.0)
-            except dbus.DBusException, e:
-                logging.debug('Error raised by TakeScreenshot(): %s', e)
+        if activity is not None:
+            service = activity.get_service()
+            if service is not None:
+                try:
+                    service.TakeScreenshot(timeout=2.0)
+                except dbus.DBusException, e:
+                    logging.debug('Error raised by TakeScreenshot(): %s', e)
 
     def set_zoom_level(self, level):
         if level == self._zoom_level:
